--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -4379,3 +4379,11 @@ textarea {
   font-weight: bold;
   color: #939393;
 }
+.small-input-select {
+  width: 30%;
+  float: left;
+  margin-top: 4px;
+}
+.small-input-select .ui-select-search {
+  width: 80% !important;
+}
