--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -897,3 +897,14 @@ input, textarea {
     }
   }
 }
+
+.small-input-select{
+
+  width: 30%;
+  float: left;
+  margin-top: 4px;
+
+  .ui-select-search{
+    width: 80% !important;
+  }
+}
