--- a/app/components/mediamodal/mediamodal.view.html
+++ b/app/components/mediamodal/mediamodal.view.html
@@ -100,8 +100,9 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="row">
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="media in medias">
-                    <div afkl-lazy-image="{{getMediaUrl(media)}}"
+                    <div ng-if="media.type == 'IMAGE'" afkl-lazy-image="{{getMediaUrl(media)}}"
                          class="afkl-lazy-wrapper afkl-img-ratio-1-1 own-classname"></div>
+                    <vimeo-video ng-if="media.type == 'VIDEO'" video-url="getMediaUrl(media)" player-width=640 player-height=360 id=video1></vimeo-video>
                 </div>
             </div>
         </div>
