--- a/app/components/mediamodal/mediamodal.view.html
+++ b/app/components/mediamodal/mediamodal.view.html
@@ -102,7 +102,8 @@
                 <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="media in medias">
                     <div ng-if="media.type == 'IMAGE'" afkl-lazy-image="{{getMediaUrl(media)}}"
                          class="afkl-lazy-wrapper afkl-img-ratio-1-1 own-classname"></div>
-                    <vimeo-video ng-if="media.type == 'VIDEO'" video-url="getMediaUrl(media)" player-width=640 player-height=360 id=video1></vimeo-video>
+                    <embed-video ng-if="media.type == 'VIDEO'" iframe-id="vimeo{{$index}}" api="1" player_id="vimeo{{$index}}" ng-href="{{getMediaUrl(media)}}"><a href="{{getMediaUrl(media)}}">Watch</a></embed-video>
+
                 </div>
             </div>
         </div>
