--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -908,3 +908,17 @@ input, textarea {
     width: 80% !important;
   }
 }
+.own-classname{
+  text-align: center !important;
+}
+.afkl-lazy-image{
+  max-width: 180px;
+  max-height: 140px;
+}
+
+.vimeo-myembed{
+
+  iframe{
+    margin-top: -20px;
+  }
+}
