--- a/app/components/mediamodal/mediamodal.view.html
+++ b/app/components/mediamodal/mediamodal.view.html
@@ -98,14 +98,16 @@
     <div class="row">
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="media in medias">
+            <div class="row container-fluid container-scroll">
+                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="media in medias" style="height: 140px;">
                     <!--- images -->
                     <div ng-if="media.type == 'IMAGE'" afkl-lazy-image="{{getMediaUrl(media)}}"
-                         class="afkl-lazy-wrapper afkl-img-ratio-1-1 own-classname" ng-click="selectImage(media)"></div>
+                         class="afkl-lazy-wrapper afkl-img-ratio-1-1 own-classname img-responsive" ng-click="selectImage(media)"></div>
                     <!-- video -->
                     <div ng-if="media.type == 'VIDEO'" style="width: 180px; height: 140px; z-index:999999;background-color: transparent;position: absolute;top:0" ng-click="selectVideo(media)"></div>
                     <embed-video class="vimeo-myembed" ng-if="media.type == 'VIDEO'" controls="0" iframe-id="vimeo{{$index}}" width="180" height="140" api="1" player_id="vimeo{{$index}}" ng-href="{{getMediaUrl(media)}}"></embed-video>
+
+                    <div class="clearfix hidden-sm-up"></div>
                 </div>
             </div>
         </div>
