--- a/app/assets/css/channelDetail.less
+++ b/app/assets/css/channelDetail.less
@@ -193,6 +193,13 @@
     height: 80px;
   }
 
+  .div-image{
+    border-radius: 5px;
+    border: 1px solid @border-grey;
+    padding: 5px;
+    height: 316px;
+  }
+
   .new-channel-author{
     border: none;
     font-family: Roboto;
