--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -1023,3 +1023,16 @@ input, textarea {
   font-weight: bold;
   text-align: center;
 }
+
+
+.div-gallery{
+  height: 316px;
+  border-radius: 5px;
+  border: 1px solid @border-grey;
+
+  .cont-gallery{
+    overflow-y: auto;
+    height: 92%;
+    margin: 10px 5px 5px;
+  }
+}
