--- a/app/components/mediamodal/mediamodal.view.html
+++ b/app/components/mediamodal/mediamodal.view.html
@@ -99,7 +99,7 @@
 
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="row container-fluid container-scroll">
-                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="media in medias" style="height: 140px;">
+                <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6" ng-repeat="media in medias | limitTo: 30" style="height: 140px;">
                     <!--- images -->
                     <div ng-if="media.type == 'IMAGE'" afkl-lazy-image="{{getMediaUrl(media)}}"
                          class="afkl-lazy-wrapper afkl-img-ratio-1-1 own-classname img-responsive" ng-click="selectImage(media)"></div>
