--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -1036,3 +1036,11 @@ input, textarea {
     margin: 10px 5px 5px;
   }
 }
+
+.delete-image{
+  position: absolute;
+  vertical-align: middle;
+  top: 30%;
+  text-align: center;
+  left:35%;
+}
