--- a/app/components/selectmedia/selectmedia.view.html
+++ b/app/components/selectmedia/selectmedia.view.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
             <button class="btn btn-pubblica-settings pull-right" style="margin-right:10px;" ng-click="saveMedia()">SALVA</button>
-            <button class="btn btn-save-bozza-settings pull-right" ng-click="selectMedia()">SELEZIONA</button>
+            <button class="btn btn-save-bozza-settings pull-right" ng-if="!isMediaView" ng-click="selectMedia()">SELEZIONA</button>
         </div>
 
     </div>
