--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3569,7 +3569,7 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: white !important;
-  min-width: 900px !important;
+  min-width: 960px !important;
 }
 html {
   background-color: white !important;
@@ -3641,10 +3641,17 @@ html {
   color: #777;
   border-top: .05rem solid #e5e5e5;
 }
-/* Customize container */
+/* Customize container
 @media (min-width: 48em) {
   .container {
     max-width: 120rem;
+  }
+}
+*/
+@media screen and (max-width: 960px) {
+  .master-uiview {
+    width: 90%;
+    margin-left: 5%;
   }
 }
 .container-narrow > hr {
@@ -3925,6 +3932,26 @@ form.communityform .community-control:hover {
   width: 150px;
   padding-left: 10px;
   border: 1px solid #48AACC !important;
+}
+.btn-comment-action {
+  font-family: RobotoMedium !important;
+  font-weight: 500;
+  background-color: white;
+  border: 1px solid #939393;
+  color: #939393;
+  font-size: 14px;
+  padding: 10px 25px;
+}
+.btn-comment-action:hover,
+.btn-comment-action:focus,
+.btn-comment-action:active {
+  border: 1px solid #939393 !important;
+  color: #939393;
+}
+.btn-comment-action.mydropdown {
+  width: 120px;
+  padding-left: 10px;
+  border: 1px solid #939393 !important;
 }
 .btn-grey {
   font-family: RobotoMedium !important;
