--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -436,6 +436,20 @@ form.communityform {
   }
 }
 
+.btn-action-publish{
+  font-family: RobotoMedium !important;
+  font-weight: 500;
+  background-color: @white;
+  border: 1px solid @green;
+  color: @green;
+  font-size: 14px;
+  padding: 10px 25px;
+
+  &:hover, &:focus, &:active{
+    border: 1px solid @green !important;
+    color: @green;
+  }
+}
 
 .btn-comment-action{
   font-family: RobotoMedium !important;
