--- a/app/components/publishmodal/publishmodal.view.html
+++ b/app/components/publishmodal/publishmodal.view.html
@@ -34,5 +34,5 @@
 
 <div class="modal-footer no-border" style="padding-bottom:20px;">
     <button class="btn btn-pubblica-settings pull-right" type="button" ng-click="ok()" style="margin-right: 20px">PROGRAMMA</button>
-    <button class="btn btn-block-settings pull-left" type="button" ng-click="cancel()" style="margin-left: 15px;">RIMUOVI PROGRAMMAZIONE</button>
+    <button class="btn btn-block-settings pull-left" type="button" ng-click="deleteProgram()" style="margin-left: 15px;">RIMUOVI PROGRAMMAZIONE</button>
 </div>
