--- a/app/assets/css/animation.css
+++ b/app/assets/css/animation.css
@@ -9,3 +9,14 @@
 .article_element.ng-enter-active {
   opacity: 1;
 }
+.page_content {
+  opacity: 1;
+}
+.page_content.ng-enter {
+  -webkit-transition: 1s;
+  transition: 1s;
+  opacity: 0;
+}
+.page_content.ng-enter-active {
+  opacity: 1;
+}
