--- a/app/assets/css/animation.less
+++ b/app/assets/css/animation.less
@@ -11,3 +11,17 @@
     opacity: 1;
   }
 }
+
+.page_content{
+
+  opacity: 1;
+
+  &.ng-enter {
+    -webkit-transition: 1s;
+    transition: 1s;
+    opacity: 0;
+  }
+  &.ng-enter-active {
+    opacity: 1;
+  }
+}
