--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3330,6 +3330,7 @@ http://kudakurage.com/ligature_symbols/
   background-color: white;
   color: #939393 !important;
 }
+/****************** vittorio *******************/
 .search-edition {
   margin-bottom: 12px !important;
 }
@@ -3605,6 +3606,9 @@ html {
 .margin-left-15px {
   margin-left: 15px !important;
 }
+.margin-left-20px {
+  margin-left: 20px !important;
+}
 .margin-left-55px {
   margin-left: 55px !important;
 }
@@ -3620,6 +3624,9 @@ html {
 .margin-top-80px {
   margin-top: 80px !important;
 }
+.margin-right-0 {
+  margin-right: 0 !important;
+}
 .margin-right-5px {
   margin-right: 5px !important;
 }
@@ -3628,6 +3635,9 @@ html {
 }
 .margin-right-15px {
   margin-right: 15px !important;
+}
+.margin-right-20px {
+  margin-right: 20px !important;
 }
 .margin-bottom-20px {
   margin-bottom: 20px !important;
