--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -58,6 +58,9 @@ html{
 .margin-left-15px{
   margin-left: 15px !important;
 }
+.margin-left-20px{
+  margin-left: 20px !important;
+}
 .margin-left-55px{
   margin-left: 55px !important;
 }
@@ -73,6 +76,9 @@ html{
 .margin-top-80px{
   margin-top: 80px !important;
 }
+.margin-right-0{
+  margin-right: 0 !important;
+}
 .margin-right-5px{
   margin-right: 5px !important;
 }
@@ -81,6 +87,9 @@ html{
 }
 .margin-right-15px{
   margin-right: 15px !important;
+}
+.margin-right-20px{
+  margin-right: 20px !important;
 }
 .margin-bottom-20px{
   margin-bottom: 20px !important;
