--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -70,6 +70,9 @@ html{
 .margin-top-15px{
   margin-top:15px !important;
 }
+.margin-top-30px{
+  margin-top: 30px !important;
+}
 .margin-top-50px{
   margin-top:50px !important;
 }
@@ -90,6 +93,9 @@ html{
 }
 .margin-right-20px{
   margin-right: 20px !important;
+}
+.margin-bottom-5px{
+  margin-bottom: 5px !important;
 }
 .margin-bottom-20px{
   margin-bottom: 20px !important;
@@ -1097,4 +1103,24 @@ input, textarea {
   top: 30%;
   text-align: center;
   left:35%;
+}
+
+#segnalationdetail{
+  .font-xl{
+    font-size: 22px;
+  }
+  .font-xxl{
+    font-size: 24px;
+  }
+  .width-content{
+    width: fit-content;
+  }
+  .btn-block-see {
+    border: 1px solid @blue;
+    background-color: white;
+    color: @blue;
+    font-weight: bold;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
 }
