--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3940,6 +3940,9 @@ form.communityform .community-control:hover {
   border-bottom-left-radius: 5px !important;
   border-top-left-radius: 5px !important;
 }
+.roboto-slab {
+  font-family: RobotoSlabBold;
+}
 .btn-pager {
   font-family: RobotoMedium !important;
   font-weight: 500;
