--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -428,7 +428,9 @@ form.communityform {
     border-top-left-radius: 5px !important;
   }
 }
-
+.roboto-slab{
+  font-family: RobotoSlabBold;
+}
 .btn-pager{
   font-family: RobotoMedium !important;
   font-weight: 500;
