--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -1107,13 +1107,15 @@ input, textarea {
   left:35%;
 }
 
+.font-xl{
+  font-size: 22px;
+}
+.font-xxl{
+  font-size: 24px;
+}
+
 #segnalationdetail{
-  .font-xl{
-    font-size: 22px;
-  }
-  .font-xxl{
-    font-size: 24px;
-  }
+
   .width-content{
     width: fit-content;
   }
@@ -1125,4 +1127,8 @@ input, textarea {
     padding-top: 5px;
     padding-bottom: 5px;
   }
+}
+
+.border-edition{
+  border: 1px solid @border-grey;
 }
