added line edition

--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -3,7 +3,7 @@
 @light-blue: #48AACC;
 @blue-tab: #3FA9F5;
 @mid-grey:#939393;
-@grey:#808080;
+@grey:#7C7C7C;
 @light-grey: #E5E5E5;
 @border-grey: #CCCCCC;
 @day-text-grey: @mid-grey;
@@ -12,7 +12,7 @@
 @green : #24C40D;
 @white: white;
 @black: black;
-@smart: #D93E5F;
+@smart: #D33352;
 @light-red: #FDE9EA;
 @orange: #F3BD3B;
 
