--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -1133,3 +1133,14 @@ input, textarea {
 .border-edition{
   border: 1px solid @border-grey;
 }
+
+.edition-green-line{
+  height: 4px;
+  background-color: @green;
+}
+
+.edition-red-line{
+  height: 4px;
+  background-color: @red;
+}
+
