--- a/app/assets/css/checkbox.css
+++ b/app/assets/css/checkbox.css
@@ -2,7 +2,7 @@
   color: #F3BD3B;
 }
 .color-grey {
-  color: #808080;
+  color: #7C7C7C;
 }
 .color-day-text-grey {
   color: #939393;
@@ -20,7 +20,7 @@
   color: #48AACC;
 }
 .color-smart {
-  color: #D93E5F;
+  color: #D33352;
 }
 .color-red {
   color: #E62726;
@@ -29,10 +29,10 @@
   color: #24C40D;
 }
 .bgcolor-smart {
-  background-color: #D93E5F;
+  background-color: #D33352;
 }
 .bgcolor-grey {
-  background-color: #808080;
+  background-color: #7C7C7C;
 }
 .bgcolor-light-grey {
   background-color: #E5E5E5;
