--- a/app/assets/css/edition.less
+++ b/app/assets/css/edition.less
@@ -1,3 +1,5 @@
+@import "colors";
+
 #editionDetail {
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -179,8 +181,8 @@ body, html {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
-    color: #7C7C7C;
-    background-color: #D33352
+    color: @grey;
+    background-color: @smart
 }
 
 img {
@@ -192,7 +194,7 @@ img {
 
 h1 {
     font-size: 24px;
-    color: #D33352;
+    color: @smart;
     font-weight: 500;
     line-height: 20px
 }
@@ -212,13 +214,13 @@ p {
 
 small {
     font-size: 13px;
-    color: #7C7C7C;
+    color: @grey;
     line-height: 16px
 }
 
 a {
     text-decoration: none;
-    color: #7C7C7C
+    color: @grey
 }
 
 b {
@@ -230,7 +232,7 @@ b {
 }
 
 .logo .cls-2 {
-    fill: #d33352
+    fill: @smart
 }
 
 .logo .cls-3 {
@@ -251,7 +253,7 @@ b {
     z-index: 3;
     width: 100%;
     padding: 18px 12px;
-    background: #D33352
+    background: @smart
 }
 
 #top-bar .titolo {
@@ -298,7 +300,7 @@ b {
     line-height: 35px;
     font-size: 18px;
     text-transform: uppercase;
-    color: #D33352;
+    color: @smart;
     font-family: 'Roboto Slab', serif;
     font-weight: 700
 }
@@ -312,7 +314,7 @@ b {
 .main-nav {
     position: relative;
     z-index: 4;
-    background: #D33352;
+    background: @smart;
     overflow: auto;
     white-space: nowrap;
     -webkit-overflow-scrolling: touch
@@ -325,7 +327,7 @@ b {
     padding: 16px 12px;
     text-decoration: none;
     text-transform: uppercase;
-    border-top: 2px solid #D33352
+    border-top: 2px solid @smart
 }
 
 .main-nav a.active {
@@ -370,7 +372,7 @@ b {
     display: inline-block;
     width: auto;
     padding: 6px 5px 6px 4px;
-    color: #7C7C7C;
+    color: @grey;
     border: 1px solid #eee;
     border-radius: 8px;
     margin-right: 4px;
@@ -422,7 +424,7 @@ b {
     font-family: 'Roboto', serif;
     font-size: 18px;
     line-height: 18px;
-    color: #7C7C7C
+    color: @grey
 }
 
 .post .post-event {
@@ -563,7 +565,7 @@ b {
 }
 
 .comment-wrap .comment .user .icon-dropdown {
-    color: #7C7C7C
+    color: @grey
 }
 
 .comment-wrap .comment .comment-content {
@@ -643,11 +645,11 @@ b {
     margin: 8px 4px;
     border-radius: 100px;
     background-color: white;
-    border: 1px solid #D33352
+    border: 1px solid @smart
 }
 
 .gallery a:hover, .gallery a.active {
-    background-color: #D33352
+    background-color: @smart
 }
 
 .channel-wrap {
@@ -680,8 +682,8 @@ b {
     display: inline-block;
     width: auto;
     padding: 6px 8px;
-    color: #09b25e;
-    border: 1px solid #09b25e;
+    color: @green;
+    border: 1px solid @green;
     border-radius: 8px;
     margin-top: 12px
 }
@@ -696,7 +698,7 @@ b {
 }
 
 .follow a.active {
-    background: #09b25e;
+    background: @green;
     color: white
 }
 
@@ -723,22 +725,22 @@ b {
     text-align: center;
     height: 50px;
     font-size: 12px;
-    color: #7C7C7C
+    color: @grey
 }
 
 #tab-bar .tab span {
     display: block;
     margin: 7px auto 4px auto;
     font-size: 24px;
-    color: #7C7C7C
+    color: @grey
 }
 
 #tab-bar .tab:hover, #tab-bar .tab.active {
-    color: #D33352
+    color: @smart
 }
 
 #tab-bar .tab:hover span:before, #tab-bar .tab.active span:before {
-    color: #D33352
+    color: @smart
 }
 
 .modal {
@@ -809,7 +811,7 @@ b {
 
 .dipiu a i {
     margin: 0 12px;
-    color: #7C7C7C
+    color: @grey
 }
 
 .dipiu a.square {
@@ -824,7 +826,7 @@ b {
     display: block;
     margin-top: 6px;
     margin-bottom: 24px;
-    color: #D33352;
+    color: @smart;
     font-size: 32px
 }
 
