--- a/app/assets/css/edition.css
+++ b/app/assets/css/edition.css
@@ -40,6 +40,76 @@
 .bgcolor-mid-grey {
   background-color: #939393;
 }
+/** Light **/
+@font-face {
+  font-family: 'RobotoSlabRegular';
+  src: url("../fonts/Roboto_Slab/RobotoSlab-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'RobotoSlabLight';
+  src: url("../fonts/Roboto_Slab/RobotoSlab-Light.ttf") format("truetype");
+  font-style: italic, oblique;
+}
+@font-face {
+  font-family: 'RobotoSlabThin';
+  src: url("../fonts/Roboto_Slab/RobotoSlab-Thin.ttf") format("truetype");
+}
+/** Regular Italic**/
+@font-face {
+  font-family: 'RobotoSlabBold';
+  src: url("../fonts/Roboto_Slab/RobotoSlab-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+/** Light **/
+@font-face {
+  font-family: 'RobotoLight';
+  src: url("../fonts/Roboto/Roboto-Light.ttf") format("truetype");
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'RobotoLightItalic';
+  src: url("../fonts/Roboto/Roboto-LightItalic.ttf") format("truetype");
+  font-style: italic, oblique;
+  font-weight: 300;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url("../fonts/Roboto/Roboto-Regular.ttf") format("truetype");
+  font-weight: 500;
+}
+/** Regular Italic**/
+@font-face {
+  font-family: 'RobotoItalic';
+  src: url("../fonts/Roboto/Roboto-Italic.ttf") format("truetype");
+  font-style: italic, oblique;
+  font-weight: 500;
+}
+/** Medium **/
+@font-face {
+  font-family: 'RobotoMedium';
+  src: url("../fonts/Roboto/Roboto-Medium.ttf") format("truetype");
+  font-weight: 600;
+}
+/** Medium Italic **/
+@font-face {
+  font-family: 'RobotoMediumItalic';
+  src: url("../fonts/Roboto/Roboto-MediumItalic.ttf") format("truetype");
+  font-style: italic, oblique;
+  font-weight: 600;
+}
+/** Bold **/
+@font-face {
+  font-family: 'RobotoBold';
+  src: url("../fonts/Roboto/Roboto-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+/** Bold Italic**/
+@font-face {
+  font-family: 'RobotoBoldItalic';
+  src: url("../fonts/Roboto/Roboto-BoldItalic.ttf") format("truetype");
+  font-weight: bold;
+  font-style: italic, oblique;
+}
 #editionDetail html,
 #editionDetail body,
 #editionDetail div,
@@ -124,7 +194,7 @@
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
+  /*font: inherit;*/
   font-size: 100%;
   vertical-align: baseline;
 }
@@ -177,14 +247,14 @@
 }
 @font-face {
   font-family: 'icomoon';
-  src: url("../img/fonts/icomoon.eot?qd7bp9");
-  src: url("../img/fonts/icomoon.eot?qd7bp9#iefix") format("embedded-opentype"), url("../img/fonts/icomoon.ttf?qd7bp9") format("truetype"), url("../img/fonts/icomoon.woff?qd7bp9") format("woff"), url("../img/fonts/icomoon.svg?qd7bp9#icomoon") format("svg");
+  src: url("../fonts/icomoon.eot?qd7bp9");
+  src: url("../fonts/icomoon.eot?qd7bp9#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?qd7bp9") format("truetype"), url("../fonts/icomoon.woff?qd7bp9") format("woff"), url("../fonts/icomoon.svg?qd7bp9#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 #editionDetail [class^="icon-"],
 #editionDetail [class*=" icon-"] {
-  font-family: 'icomoon' !important;
+  font-family: 'icomoon';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -346,7 +416,7 @@
 #editionDetail #top-bar .titolo {
   font-size: 21px;
   color: white;
-  font-family: 'Roboto Slab', serif;
+  font-family: RobotoSlabBold, serif;
   font-weight: 300;
 }
 #editionDetail #top-bar .selettore {
@@ -425,6 +495,8 @@
   padding-bottom: 80px;
   position: relative;
   top: 0;
+  max-height: 800px;
+  overflow-y: auto;
 }
 #editionDetail .container {
   position: relative;
@@ -707,7 +779,7 @@
   width: auto;
   padding: 6px 8px;
   color: #24C40D;
-  border: 1px solid #24C40D;
+  border: 1px solid #09b25e;
   border-radius: 8px;
   margin-top: 12px;
 }
