--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -8,7 +8,7 @@
 @import "checkbox";
 @import "toastr";
 @import "editor";
-@import "edition.less";
+@import "edition";
 
 *{
   font-family: Roboto;
