--- a/app/assets/css/edition.less
+++ b/app/assets/css/edition.less
@@ -1,7 +1,7 @@
 @import "colors";
 @import "fonts";
 
-#editionDetail {
+.editionDetail {
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
@@ -202,7 +202,8 @@ h1 {
 }
 
 h2 {
-    font-size: 18px;
+    font-family: RobotoBold;
+    font-size: 16px;
     color: #444;
     font-weight: 500;
     line-height: 23px
